--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "backend",
+  "name": "grow_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec ts-node server.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,8 @@
     "@types/express": "^4.17.17",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.4.0",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
