--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,15 @@
     "mongodb": "^5.6.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.4.0",
+    "axios": "^1.4.0",
+    "install": "^0.13.0",
     "nodemon": "^2.0.22",
+    "npm": "^9.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
