--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon --exec ts-node server.ts"
   },
   "keywords": [],
@@ -19,12 +19,15 @@
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.4.0",
     "axios": "^1.4.0",
     "install": "^0.13.0",
+    "jest": "^29.6.1",
     "nodemon": "^2.0.22",
     "npm": "^9.8.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
